--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       body {
         margin: 0;
         height: 100%;
-        background: #1a032b;
+        background-color: #000;
+        color: #fff;
         overflow: hidden;
         perspective: 10rem;
       }
@@ -58,6 +59,39 @@
   <body>
     
     <div id="canvas"></div>
+
+    <script type="x-shader/x-vertex" id="vertexShader">
+
+			varying vec3 vWorldPosition;
+
+			void main() {
+
+				vec4 worldPosition = modelMatrix * vec4( position, 1.0 );
+				vWorldPosition = worldPosition.xyz;
+
+				gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
+
+			}
+
+		</script>
+
+		<script type="x-shader/x-fragment" id="fragmentShader">
+
+			uniform vec3 topColor;
+			uniform vec3 bottomColor;
+			uniform float offset;
+			uniform float exponent;
+
+			varying vec3 vWorldPosition;
+
+			void main() {
+
+				float h = normalize( vWorldPosition + offset ).y;
+				gl_FragColor = vec4( mix( bottomColor, topColor, max( pow( max( h , 0.0), exponent ), 0.0 ) ), 1.0 );
+
+			}
+
+		</script>
 
     <script src="./src/index.ts"></script>
   </body>
