--- a/index.html
+++ b/index.html
@@ -21,45 +21,13 @@
         overflow: hidden;
       }
     </style>
-
-<script type="x-shader/x-vertex" id="vertexShader">
-
-  varying vec3 vWorldPosition;
-
-  void main() {
-
-    vec4 worldPosition = modelMatrix * vec4( position, 1.0 );
-    vWorldPosition = worldPosition.xyz;
-
-    gl_Position = projectionMatrix * modelViewMatrix * vec4( position, 1.0 );
-
-  }
-
-</script>
-
-<script type="x-shader/x-fragment" id="fragmentShader">
-
-  uniform vec3 topColor;
-  uniform vec3 bottomColor;
-  uniform float offset;
-  uniform float exponent;
-
-  varying vec3 vWorldPosition;
-
-  void main() {
-
-    float h = normalize( vWorldPosition + offset ).y;
-    gl_FragColor = vec4( mix( bottomColor, topColor, max( pow( max( h , 0.0), exponent ), 0.0 ) ), 1.0 );
-
-  }
-
-</script>
   </head>
 
   <body>
     
     <div id="canvas"></div>
 
+    <!-- USED BY SKYDOME -->
     <script type="x-shader/x-vertex" id="vertexShader">
 
 			varying vec3 vWorldPosition;
@@ -74,7 +42,7 @@
 			}
 
 		</script>
-
+    <!-- USED BY SKYDOME -->
 		<script type="x-shader/x-fragment" id="fragmentShader">
 
 			uniform vec3 topColor;
