remopved some redundant code

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         text-align: center;
         color: #000;
       }
+
+      .dg.ac {
+        z-index: 300 !important;
+      }
+      
     </style>
   </head>
 
