buton moved to bottom

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
       #info {
         position: absolute;
-        top: 0px;
+        bottom: 0px;
         z-index: 265;
         width: 100%;
         padding: 10px;
@@ -40,7 +40,7 @@
       .dg.ac {
         z-index: 300 !important;
       }
-      
+
     </style>
   </head>
 
